--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 python-telegram-bot
-odoorpc  # <-- Nâng cấp lên phiên bản mới nhất
 pandas
-openpyxl # <-- Thư viện cần thiết để pandas xuất file Excel
+openpyxl
